build: package StealthSync 1.3.0 Windows installer